RESOLVED FIXED211719
[ConnectionUnix] Set MSG_NOSIGNAL to avoid SIGPIPE
https://bugs.webkit.org/show_bug.cgi?id=211719
Summary [ConnectionUnix] Set MSG_NOSIGNAL to avoid SIGPIPE
Yoshiaki Jitsukawa
Reported 2020-05-11 03:17:00 PDT
[ConnectionUnix] Set MSG_NOSIGNAL to avoid SIGPIPE
Attachments
Patch (1.86 KB, patch)
2020-05-11 03:22 PDT, Yoshiaki Jitsukawa
no flags
Yoshiaki Jitsukawa
Comment 1 2020-05-11 03:22:27 PDT
EWS
Comment 2 2020-05-21 08:27:23 PDT
Committed r261998: <https://trac.webkit.org/changeset/261998> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399009 [details].
Radar WebKit Bug Importer
Comment 3 2020-05-21 08:28:14 PDT
Note You need to log in before you can comment on or make changes to this bug.