[ConnectionUnix] Set MSG_NOSIGNAL to avoid SIGPIPE https://bugs.webkit.org/show_bug.cgi?id=211719

Reviewed by Don Olmstead.

Set MSG_NOSIGNAL to sendmsg()/resvmsg() in order to avoid
SIGPIPE when the other process disappears.
* Platform/IPC/unix/ConnectionUnix.cpp:
(IPC::readBytesFromSocket):
(IPC::Connection::sendOutputMessage):


Canonical link: https://commits.webkit.org/225070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261998 268f45cc-cd09-0410-ab3c-d52691b4dbfc